2007-11-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/regc_nfa.c:	Fixed infinite loop in the regexp compiler
	* generic/regcomp.c:	[Bug 1810038].  Corrected looping logic in
	* tests/regexp.test:	fixempties() to avoid wasting time walking a
	list of dead states [Bug 1832612].  Convert optst() from expensive
	no-op to a cheap no-op.  Improve newline usage in debug output.

2007-11-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tclUnixCompat.c (TclpGetHostByName): The six-argument form of
	getaddressbyname_r() uses the fifth argument to indicate whether the
	lookup succeeded or not on at least one platform. [Bug 1618235]

2007-10-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/regc_lex.c (lexescape): Ensure that backreference numbers
	can't overflow a signed int in a way that breaks things. [Bug 1810264]

2007-10-15  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclParse.c (Tcl_ParseBraces): fix for possible read
	after the end of buffer, [Bug 1813528] (Joe Mistachkin).

2007-10-03  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclObj.c (Tcl_FindCommandFromObj): fix finding a deleted
	command; cannot trigger this from Tcl itself, but crash reported
	on xotcl. This check is new to 8.4 but exists in 8.5, so this is a
	backport or something. Thanks Gustaf Neumann.

2007-10-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tcl.h (Tcl_DecrRefCount): Update change from 2006-05-29
	to make macro more warning-robust in unbraced if code.

2007-10-02  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.4.17
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

2007-09-20  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.16 TAGGED FOR RELEASE ***

	* doc/load.n:	Backport corrected example.

2007-09-19  Don Porter  <dgp@users.sourceforge.net>
